# New_repo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  rnn.py  test.ipynb  test_dictionary.ipynb
.github/workflows/: cr.yml
configs/data/: default.yaml
configs/model/: attention.yaml  seq2seq.yaml  transformer.yaml
configs/trainer/: default.yaml
docs/source/: conf.py  index.rst
docs/source/nlp/: nlp.core.base.rst  nlp.core.train.rst  nlp.datasets.data_helper.rst  nlp.datasets.rst  nlp.models.base.rst  nlp.models.lstm.rst  nlp.models.seq2seq.rst  nlp.rst  nlp.utils.metrics.rst  nlp.utils.metrics_refer.rst  nlp.utils.rst
nlp/core/: base.py  train.py
nlp/datasets/: data_helper.py
nlp/model/: base.py  gpu.py  lstm.py  rnn.py
nlp/models/: __init__.py  attention.py  base.py  gpu.py  lstm.py  rnn.py  seq2seq.py  transformer.py
nlp/utils/: metrics.py  metrics_refer.py
nlp_pl/: data_helper.py  main.py  train.py
